Some changes on the Security and Rest Endpoints